py-arrow: the measurement in docs, spec results and changelog; sprint item closed
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LZNspDq7ZU8TRfNoTnpRMD